@startuml
'https://plantuml.com/class-diagram

class Sort<T> {
    + sort(T[] arr, Compare<T> compare): void
}

interface Compare<T> {
    + compareTo(T o1, T o2): int
}

class Dog {
    + age: int
}

class AgeCompare<Dog> {
    + compareTo(Dog dog1, Dog dog2): int
}

class StrategyTest {
    + dogs: Dog[]
    + ageCompare: AgeCompare

}

'各个部分之间的关系
Sort <...  Compare
Compare <|... AgeCompare
StrategyTest o-- AgeCompare
AgeCompare <... Dog
StrategyTest o-- Dog
StrategyTest <--- Sort


@enduml